# claude-autosar-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run_examples.py
.github/workflows/: ci.yml
examples/brake_actuator/BrakeActuator/: component.arxml  datatypes.arxml  interfaces.arxml  spec.json
examples/brake_actuator/BrakeActuator/c_code/: BrakeActuator.c  BrakeActuator.h  Rte_BrakeActuator.h  Rte_Types.h
examples/can_gateway/CanGateway/: component.arxml  datatypes.arxml  interfaces.arxml  spec.json
examples/can_gateway/CanGateway/c_code/: CanGateway.c  CanGateway.h  Rte_CanGateway.h  Rte_Types.h
examples/speed_sensor/SpeedSensor/: component.arxml  datatypes.arxml  interfaces.arxml  spec.json
examples/speed_sensor/SpeedSensor/c_code/: Rte_SpeedSensor.h  Rte_Types.h  SpeedSensor.c  SpeedSensor.h
matlab_scripts/: generate_rte_code.m  import_autosar_arxml.m  parse_errors.m  run_simulation.m
src/: __init__.py  arxml_generator.py  c_code_generator.py  claude_client.py  feedback_loop.py  matlab_bridge.py  models.py  orchestrator.py  prompt_templates.py  schema_validator.py
tests/: smoke_claude.py
