[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-autosar-integration"
version = "0.1.0"
description = "Agentic pipeline: Claude API -> ARXML -> MATLAB AUTOSAR simulation"
authors = [{name = "Akhilesh Dandavati"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
